mobile/build_log.txt
Running Gradle task 'assembleRelease'...                        
Warning: The plugin google_sign_in_android requires Android SDK version 36 or higher.
For more information about build configuration, see https://flutter.dev/to/review-gradle-config.
Warning: The plugin package_info_plus requires Android SDK version 36 or higher.
For more information about build configuration, see https://flutter.dev/to/review-gradle-config.
Warning: The plugin path_provider_android requires Android SDK version 36 or higher.
For more information about build configuration, see https://flutter.dev/to/review-gradle-config.
Warning: The plugin shared_preferences_android requires Android SDK version 36 or higher.
For more information about build configuration, see https://flutter.dev/to/review-gradle-config.
Warning: The plugin webview_flutter_android requires Android SDK version 36 or higher.
For more information about build configuration, see https://flutter.dev/to/review-gradle-config.
Your project is configured to compile against Android SDK 34, but the following plugin(s) require to be compiled against a higher Android SDK version:
- google_sign_in_android compiles against Android SDK 36
- package_info_plus compiles against Android SDK 36
- path_provider_android compiles against Android SDK 36
- shared_preferences_android compiles against Android SDK 36
- webview_flutter_android compiles against Android SDK 36
Fix this issue by compiling against the highest Android SDK version (they are backward compatible).
Add the following to /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/build.gradle:

    android {
        compileSdk = 36
        ...
    }

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:buildCMakeRelease[arm64-v8a]'.
> com.android.ide.common.process.ProcessException: ninja: Entering directory `/Users/rexhsu/Documents/go-strategy-app/mobile/build/.cxx/release/2t384a5x/arm64-v8a'
  [1/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/neuralnet/metalbackend.cpp.o
  [2/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/dataio/numpywrite.cpp.o
  FAILED: CMakeFiles/katago_mobile.dir/katago/cpp/dataio/numpywrite.cpp.o 
  /opt/homebrew/share/android-commandlinetools/ndk/28.2.13676358/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=aarch64-none-linux-android24 --sysroot=/opt/homebrew/share/android-commandlinetools/ndk/28.2.13676358/toolchains/llvm/prebuilt/darwin-x86_64/sysroot -DBIG_ENDIAN=4321 -DBYTE_ORDER=1234 -DLITTLE_ENDIAN=1234 -DNO_GIT_REVISION -DUSE_BACKEND_EIGEN -D_REENTRANT -Dkatago_mobile_EXPORTS -I/Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/eigen -I/Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp -I/Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/external -I/Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/external/tclap-1.2.5/include -I/Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/external/nlohmann_json -I/Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/external/filesystem-1.5.8/include -I/Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/fake_zip -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -O3 -DNDEBUG  -fPIC   -O3 -std=gnu++17 -MD -MT CMakeFiles/katago_mobile.dir/katago/cpp/dataio/numpywrite.cpp.o -MF CMakeFiles/katago_mobile.dir/katago/cpp/dataio/numpywrite.cpp.o.d -o CMakeFiles/katago_mobile.dir/katago/cpp/dataio/numpywrite.cpp.o -c /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp:270:16: error: use of undeclared identifier 'zip_error_init'; did you mean 'zip_error_t'?
    270 |   ZipError() { zip_error_init(&value); }
        |                ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/fake_zip/zip.h:10:3: note: 'zip_error_t' declared here
     10 | } zip_error_t;
        |   ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp:271:17: error: use of undeclared identifier 'zip_error_fini'; did you mean 'zip_error_t'?
    271 |   ~ZipError() { zip_error_fini(&value); }
        |                 ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/fake_zip/zip.h:10:3: note: 'zip_error_t' declared here
     10 | } zip_error_t;
        |   ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp:280:33: error: use of undeclared identifier 'zip_source_file_create'
    280 |   zip_source_t* zipFileSource = zip_source_file_create(fileName.c_str(),0,-1,&(zipError.value));
        |                                 ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp:282:82: error: use of undeclared identifier 'zip_error_strerror'; did you mean 'zip_strerror'?
    282 |     throw StringError("Could not open zip file " + fileName + " due to error " + zip_error_strerror(&(zipError.value)));
        |                                                                                  ^~~~~~~~~~~~~~~~~~
        |                                                                                  zip_strerror
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/fake_zip/zip.h:30:20: note: 'zip_strerror' declared here
     30 | inline const char *zip_strerror(zip_t *) { return "stub"; }
        |                    ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp:283:23: error: use of undeclared identifier 'zip_open_from_source'
    283 |   zip_t* fileHandle = zip_open_from_source(zipFileSource, ZIP_CREATE | ZIP_TRUNCATE, &(zipError.value));
        |                       ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp:287:82: error: use of undeclared identifier 'zip_error_strerror'; did you mean 'zip_strerror'?
    287 |     throw StringError("Could not open zip file " + fileName + " due to error " + zip_error_strerror(&(zipError.value)));
        |                                                                                  ^~~~~~~~~~~~~~~~~~
        |                                                                                  zip_strerror
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/fake_zip/zip.h:30:20: note: 'zip_strerror' declared here
     30 | inline const char *zip_strerror(zip_t *) { return "stub"; }
        |                    ^
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/katago/cpp/dataio/numpywrite.cpp:302:50: error: use of undeclared identifier 'zip_error_strerror'; did you mean 'zip_strerror'?
    302 |       " within " + fileName + " due to error " + zip_error_strerror(&(zipError.value))
        |                                                  ^~~~~~~~~~~~~~~~~~
        |                                                  zip_strerror
  /Users/rexhsu/Documents/go-strategy-app/mobile/android/app/src/main/cpp/fake_zip/zip.h:30:20: note: 'zip_strerror' declared here
     30 | inline const char *zip_strerror(zip_t *) { return "stub"; }
        |                    ^
  7 errors generated.
  [3/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/game/graphhash.cpp.o
  [4/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/neuralnet/modelversion.cpp.o
  [5/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/neuralnet/dummybackend.cpp.o
  [6/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/dataio/trainingwrite.cpp.o
  [7/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/game/boardhistory.cpp.o
  [8/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/game/board.cpp.o
  [9/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/neuralnet/desc.cpp.o
  [10/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/game/rules.cpp.o
  [11/45] Building CXX object CMakeFiles/katago_mobile.dir/katago/cpp/dataio/sgf.cpp.o
  ninja: build stopped: subcommand failed.

  C++ build system [build] failed while executing:
      /opt/homebrew/share/android-commandlinetools/cmake/3.22.1/bin/ninja \
        -C \
        /Users/rexhsu/Documents/go-strategy-app/mobile/build/.cxx/release/2t384a5x/arm64-v8a \
        katago_mobile
    from /Users/rexhsu/Documents/go-strategy-app/mobile/android/app

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 6s
Running Gradle task 'assembleRelease'...                            6.6s
Gradle task assembleRelease failed with exit code 1
